--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,6 @@ body {
     font-size: 36px;
     line-height: 21px;
     padding-top: 20px;
-    padding-left: calc(50% - 566px/2 + 152px);
     color: rgba(255, 255, 255, 0.87);
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -41,6 +40,40 @@ body {
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
-    padding-left: calc(50% - 566px/2 + 152px);
     color: rgba(255, 255, 255, 0.67);
+}
+
+.ad-container {
+    display: flex;
+    justify-content: space-between;
+    min-width: 750px;
+}
+.ad-image {
+    padding: 20px 20px 20px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.invisible-textarea {
+    border: none;
+    background-color: transparent;
+    resize: none;
+    outline: none;
+    overflow: hidden;
+    height: 100%;
+    padding-right: 20px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.67);
+}
+
+.ad-text {
+    width: 100%;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
 }
