--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
     <ul class="collection no-border">
 
-        <% if (ads.length == 0) { %>
+        <% if (ads.length === 0) { %>
             <div style="text-align: center; color: white">
                 <h1>Még senki sem hozott létre hirdetést.</h1>
             </div>
